<resources>
    <string name="app_name">Meet @ OsloMet</string>
    <string name="preference_AuthKey"></string>
    <string name="preference_username"></string>
    <string name="preference_validate">false</string>
    <string name="preference_setPassword">false</string>
    <string name="preference_matchPreference">0</string>
    <string name="preference_idUser"></string>
    <string name="title_activity_match">ActivityMatch</string>
    <string name="gender0">Male</string>
    <string name="gender1">Female</string>
    <string name="gender2">Other</string>
    <string name="genderSelect">Please select your gender</string>
    <string-array name="genders">
        <item>@string/genderSelect</item>
        <item>@string/gender0</item>
        <item>@string/gender1</item>
        <item>@string/gender2</item>
    </string-array>
    <string name="position0">Bachelor student</string>
    <string name="position1">Master/PhD student</string>
    <string name="position2">Academic staff</string>
    <string name="position3">Administrative staff</string>
    <string name="position4">Other</string>
    <string-array name="positions">
        <item>@string/position0</item>
        <item>@string/position1</item>
        <item>@string/position2</item>
        <item>@string/position3</item>
        <item>@string/position4</item>
    </string-array>
    <string name="campus1">Pilestredet</string>
    <string name="campus2">Kjeller</string>
    <string name="campus3">Sandvika</string>
    <string-array name="campuses">
        <item>@string/campus1</item>
        <item>@string/campus2</item>
        <item>@string/campus3</item>
    </string-array>
    <string-array name="languages_array">
        <item>English</item>
        <item>Japanese</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Norwegian</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>Swedish</item>
        <item>German</item>
    </string-array>
    <string-array name="countryCode_array">
        <item>GB</item>
        <item>JP</item>
        <item>FR</item>
        <item>ES</item>
        <item>NO</item>
        <item>DK</item>
        <item>NL</item>
        <item>SE</item>
        <item>DE</item>
    </string-array>
    <string name="legalNote">"By using this application or related software you agree that you have read and accept the &lt;a href=https://meet.vlab.cs.hioa.no/legal/tou.html>terms of use&lt;/a> and that you are familiar with the &lt;a href=https://meet.vlab.cs.hioa.no/legal/privacyPolicy.html>privacy policy&lt;/a>"</string>
    <string name="campusDefault">Please select your camps</string>
    <string name="title_activity_chat">ActivityChat</string>
    <string name="recommended_lang0">Speaks</string>
    <string name="recommended_lang1">Needs help with</string>
    <string name="fragment_tandem_requestsTitle">People wanting to chat</string>
    <string name="fragment_tandem_tandemTitle">Messages</string>
    <string name="fragment_tandem_lastMessage">You: Hallaaa &#8226; 12:01</string>
    <string name="fragment_tandem_lastMessage_placeholder">Click here to see more…</string>
    <string name="text_login">Sign in</string>
    <string name="text_register">Register</string>
    <string name="text_usernameTitle">Student number or employee username</string>
    <string name="text_goback">Go back</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_password">Password</string>
    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="title_activity_terms">Terms and Conditions</string>
    <string name="terms_text">
       "The application will give information such as name, age, language interest and qualifications"
        "at OsloMet.The hobbies of user are also shown which helps to find a correct match."
        "All the students and staff at OsloMet who are registered in the app can use the app and"
        "communicate with their matches. A matching algorithm is used to find the correct match "
        "based on their language interest and hobbies. \n\n"
        "The institution carries no responsibilities for misuse of this application and the "
        "communication and information exchanged between the user and their match. How much "
        "information is shared must be controlled by the user themselves and focus should be made"
        "in learning and exchanging knowledge about language they want to learn."

    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_privacy">Privacy Policy</string>
    <string name="logout">Logout</string>
</resources>