<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomdesign"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:elevation="4dp"
    android:orientation="horizontal"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/infoTxtTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:linksClickable="true"
            android:minHeight="60dp"
            android:text="@string/title_activity_terms" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorLightGary" />

        <TextView
            android:id="@+id/infoTxtPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:linksClickable="true"
            android:minHeight="60dp"
            android:text="@string/title_activity_privacy" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorLightGary" />

        <TextView
            android:id="@+id/infoTxtLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:linksClickable="true"
            android:minHeight="60dp"
            android:text="@string/logout" />

    </LinearLayout>

</LinearLayout>