<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMyProfile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorAccent"
                android:layout_gravity="center_horizontal"/>
            <LinearLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_first_name"/>
                <EditText
                    android:id="@+id/inputFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ola"/>
            </LinearLayout>
            <LinearLayout

                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_last_name"/>
                <EditText
                    android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nordmann"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/dateOfBirthLayout"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_toLeftOf="@id/switchShowAgeLayout">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Date of birth"/>
                    <EditText
                        android:editable="false"
                        android:hint="01-01-1990"
                        android:id="@+id/dateEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="none"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_alignParentTop="true"
                    android:id="@+id/switchShowAgeLayout"
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Show age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <Switch
                        android:layout_marginTop="8dp"
                        android:layout_gravity="bottom|center"
                        android:gravity="bottom|center"
                        android:textColor="@color/colorAccent"
                        android:id="@+id/switchShowAge"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gender"/>
                <Spinner
                    android:prompt="@string/genderSelect"
                    android:id="@+id/spinnerGender"
                    android:minHeight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Position at OsloMet"/>
                <Spinner
                    android:minHeight="40dp"
                    android:id="@+id/spinnerPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Campus"/>
                <Spinner
                    android:minHeight="40dp"
                    android:id="@+id/spinnerCampus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Languages i want to improve"/>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="12dp"
                    android:elevation="3dp">
                    <ListView
                        android:id="@+id/listView_LangImprove"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></ListView>
                </android.support.v7.widget.CardView>
                <ImageButton
                    android:id="@+id/addLanguageToLearn"
                    android:src="@drawable/ic_add_black_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Languages i teach"/>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="12dp"
                    android:elevation="3dp">
                    <ListView
                        android:id="@+id/listView_LangTeach"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></ListView>
                </android.support.v7.widget.CardView>
                <ImageButton
                    android:id="@+id/addLanguageToTeach"
                    android:src="@drawable/ic_add_black_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="My hobbies"/>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="12dp"
                    android:elevation="3dp">
                    <ListView
                        android:id="@+id/listView_Hobbies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></ListView>
                </android.support.v7.widget.CardView>
                <ImageButton
                    android:id="@+id/addHobbies"
                    android:src="@drawable/ic_add_black_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <Button
                android:id="@+id/profileUpload"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="Upload"/>
        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>